--- a/jitpack.yml
+++ b/jitpack.yml
@@ -2,3 +2,7 @@ jdk:
   - openjdk17
 before_install:
   - ./scripts/prepareJitpackEnvironment.sh
+install:
+      - FILE="-Dfile=callsdk.aar" #com-atifqamar-customtoast.aar
+      - mvn install:install-file $FILE -DgroupId=com.github.nwudoebuka -DartifactId=callsdk -Dversion=1.0.35 -Dpackaging=aar -DgeneratePom=true
+      #com.github.geek-atif                      #com-atifqamar-customtoast  #1.0
