--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.nwudoebuka</groupId>
-    <artifactId>your dependencie</artifactId>
+    <artifactId>callsdk</artifactId>
     <version>1.0.35</version>
     <packaging>pom</packaging>
     <description>First version release</description>
